Fix navbar back button overlapping on small screens

--- a/core/templates/components/common-layout-directives/navigation-bars/top-navigation-bar.component.css
+++ b/core/templates/components/common-layout-directives/navigation-bars/top-navigation-bar.component.css
@@ -109,6 +109,10 @@
   display: flex;
 }
 
+.oppia-top-navigation-bar .oppia-navbar-back-button{
+  margin-right: 9px;
+  margin-top: 10px;
+}
 .oppia-top-navigation-bar .top-section .heading-text {
   display: inline-block;
   margin-left: 7px;
